--- a/ui/src/app/components/recipes/recipe-list/recipe-list.component.scss
+++ b/ui/src/app/components/recipes/recipe-list/recipe-list.component.scss
@@ -30,6 +30,8 @@
     gap: var(--space-sm);
     align-items: center;
     flex-wrap: wrap;
+    flex: 1;
+    justify-content: flex-end;
 
     mat-button-toggle-group {
       flex-shrink: 0;
@@ -44,6 +46,9 @@
     .search-field {
       width: min(300px, 100%);
       margin-bottom: -1.25em;
+      flex: 1;
+      min-width: 150px;
+      max-width: 300px;
     }
   }
 }
